--- a/client/src/angular/workbench/templates/workspace.html
+++ b/client/src/angular/workbench/templates/workspace.html
@@ -1,103 +1,37 @@
 <div class="container-fluid" role="main" id="workspace">
-  <div ng-controller="ApplicationTrayCtrl"
-       class="workspace-panel workspace-panel-fixed"
-  >
+  <div ng-controller="ApplicationTrayCtrl" class="workspace-panel-tabs">
     <div>
         <p ng-show="error" class="alert alert-danger">{{error}}</p>
-        <div class="app-wrapper" ng-show="!data.apps">
-            <div class="app text-center" ng-show="requesting">
+        <div class="app-wrapper" ng-if="requesting">
+            <div class="app text-center">
                 <div class="app-icon"><i class="fa fa-circle-o-notch fa-spin fa-3x"></i></div>
                 <div class="app-title">Loading...</div>
                 <div class="app-version">&nbsp;</div>
             </div>
         </div>
-        <uib-tabset ng-show="!requesting">
-          <uib-tab ng-repeat="tab in tabs|orderBy: '-title'" active="tab.active">
-            <uib-tab-heading>
-              <div ng-switch="tab.title">
-                <div ng-switch-when="Public">
-                  <span>{{tab.title}} </span>
-                </div>
-                <div ng-switch-when="Private">
-                  <span>{{tab.title}} </span>
-                </div>
-                <div ng-switch-default>
-                  <span>{{tab.title}} <i class="fa fa-times" aria-hidden="true" ng-click="removeTab($event, $index, tab)"></i></span>
-                </div>
-              </div>
-            </uib-tab-heading>
+        <uib-tabset id="workspace-tabs" ng-show="!requesting" active="activeTab">
+            <uib-tab class="workspace-tab" ng-repeat="tab in tabs" focusout="closeTab($event, tab)">
+                <uib-tab-heading>
+                    <h3 class="workspace-tab-title">{{tab.title}} [{{tab.count}}]</h3>
+                </uib-tab-heading>
 
-            <div ng-show="!tab.edit" class="apps-tray top-buffer">
-                <div ng-repeat="app in tab.content | orderBy: 'label'"
-                     ng-click="launchApp(app)"
-                     class="app-wrapper"
-                     ng-class="{'app-active': data.activeApp.value.definition.id==app.value.definition.id}">
-                  <div class="app text-center">
-                    <div class="app-icon"><i class="fa fa-cube fa-3x"></i></div>
-                    <div class="app-title">{{app.value.definition.label}}</div>
-                    <div class="app-version">{{app.value.definition.version}}</div>
-                  </div>
-                </div>
-            </div>
-            <div ng-show="tab.edit" class="dnd-list">
-              <div class="page-header">
-                <h3>Customize your apps tray</h3>
-                <p>
-                  Select any DesignSafe-CI Apps from the Apps tray and drag
-                  them to your customized tray. Click your tray title to edit it.
-                  Save your changes.
-                </p>
-              </div>
-              <div class="row top-buffer">
-                <div ng-repeat="list in tab.multiple.lists" class="col-md-6">
-                  <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">
-                          <div ng-switch="list.listName">
-                            <div ng-switch-when="Apps">
-                              {{list.listName}}
+                <div ng-show="!tab.edit" class="apps-tray">
+                    <md-grid-list md-cols="6" md-row-height="3:2" md-gutter="0px">
+                        <md-grid-tile ng-repeat="app in tab.content | orderBy: 'value.definition.orderBy'" ng-click="launchApp(app)" ng-class="{'app-active': data.activeApp.value.definition.id==app.value.definition.id}">
+                            <div class="app text-center">
+                                <md-grid-tile-header class="app-header">
+                                    <h5 class="app-title">{{app.value.definition.label}}</h5>
+                                </md-grid-tile-header>
+                                <div class="app-icon">
+                                    <i ng-if="app.value.definition.icon" class="icon-{{app.value.definition.icon}}"></i>
+                                    <span ng-if="!app.value.definition.icon" class="icon-letter">{{app.value.definition.label[0].toUpperCase()}}</span>
+                                </div>
+                                <!-- <div class="app-version">{{app.value.definition.version}}</div> -->
                             </div>
-                            <div ng-switch-default>
-                              <a href="#" editable-text="list.listName">{{list.listName}}</a>
-                            </div>
-                          </div>
-                        </h3>
-                    </div>
-                    <div class="panel-body text-center">
-
-                      <ul dnd-list dnd-drop="onDrop(list, item, index)" class="list-inline">
-                        <li ng-repeat="item in list.items"
-                            dnd-draggable="getSelectedItemsIncluding(list, item)"
-                            dnd-dragstart="onDragstart(list, event)"
-                            dnd-moved="onMoved(list)"
-                            dnd-dragend="list.dragging = false"
-                            dnd-selected="item.selected = !item.selected"
-                            ng-class="{'selected': item.selected}"
-                            ng-hide="list.dragging && item.selected"
-                            class="app-wrapper"
-                            >
-                              <div class="app text-center">
-                                <div class="app-icon"><i class="fa fa-cube fa-3x"></i></div>
-                                <div class="app-title">{{item.label}}</div>
-                                <div class="app-version">{{item.version}}</div>
-                              </div>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="button-group pull-right" ng-show="list.listName !== 'Apps'">
-                    <button class="btn btn-default" ng-click="cancelTab(tab, list)">Cancel</button>
-                    <button class="btn btn-primary" ng-click="saveTab(tab, list)">Save</button>
-                  </div>
+                        </md-grid-tile>
+                    </md-grid-list>
                 </div>
-              </div>
-
-            </div>
-            <div class="text-center top-buffer">
-              <button ng-show="tab.title !== 'Public' && tab.title !== 'Private' && !tab.edit" class="btn btn-default" ng-click="editTab(tab); tab.edit = !tab.edit">Edit</button>
-            </div>
           </uib-tab>
-          <!-- <button class="btn btn-default btn-tab" ng-click="addTab()" ><i class="fa fa-plus"></i></button> -->
         </uib-tabset>
     </div>
   </div>
