button modals should work now

--- a/client/src/angular/workbench/templates/dashboard.html
+++ b/client/src/angular/workbench/templates/dashboard.html
@@ -39,7 +39,7 @@
       <div><a href="/accounts/profile">Manage Account</a></div>
       <div><a href="/workbench/data-depot ">Data Depot</a></div>
       <div><a href="/workbench/workspace">Workspace</a></div>
-      <div><a href="/workbench/help">Training</a></div>
+      <!-- <div><a href="/workbench/help">Training</a></div> -->
     </div>
 
   </div>
