Fix workspace html app loading

--- a/client/css/workspace.css
+++ b/client/css/workspace.css
@@ -366,7 +366,7 @@ font-family: 'designsafe-workspace';
 .icon-qgis:before {
     content: "\e907";
 }
-i[class^="icon-ls"][class$="dyna"]:before, i[class^="icon-ls-pre/post"]:before {
+.icon-ls-dyna:before {
     content: "\e908";
 }
 .icon-visit:before {
