--- a/client/src/angular/data_depot/templates/data-depot-toolbar.html
+++ b/client/src/angular/data_depot/templates/data-depot-toolbar.html
@@ -32,7 +32,7 @@
             <button class="btn btn-sm btn-default" title="Rename" ng-click="ops.rename()"
                      ng-disabled="!tests.canRename ||
                                   browser.project.publicationStatus === 'publishing'">
-                <i class="fa fa-pencil"></i><span style="display:block;">RenameTEST2</span>
+                <i class="fa fa-pencil"></i><span style="display:block;">Rename</span>
             </button>
         </div>
 
