Workspace data browser fixes

--- a/client/src/angular/workbench/templates/workspace.html
+++ b/client/src/angular/workbench/templates/workspace.html
@@ -67,7 +67,7 @@
                  <thead>
                   <th>Name</th>
                  </thead>
-                 <tbody ng-if="!sate.busy">
+                 <tbody ng-if="!state.busy">
                    <tr ng-repeat="item in data.projects">
                      <td>
                        <i class="fa fa-briefcase"></i>
