disabled delete button and fixed breadcrumbs

--- a/client/src/angular/data_depot/templates/dd-breadcrumb.html
+++ b/client/src/angular/data_depot/templates/dd-breadcrumb.html
@@ -1,7 +1,7 @@
 <ul class="breadcrumb">
     <li ng-if="customRoot">
         <!-- <a href="{{ customRoot.href }}">{{ customRoot.name }}</a> -->
-        <span>{{ customRoot.name }}</span>
+        <a ui-sref="{{ customRoot.route }}" ui-sref-active="active"> {{ customRoot.name }}</a>
     </li>
     <li ng-if="project">
         <a href="{{ project.href }}">{{ project.name }}</a>
