--- a/client/src/angular/workbench/templates/data-depot.html
+++ b/client/src/angular/workbench/templates/data-depot.html
@@ -64,8 +64,11 @@
                            ng-if="!tests.canDelete">
                       <i class="fa fa-trash"></i><span style="display:block;">Move to Trash</span>
                   </button> -->
-                  <!--
-                   <button class="btn btn-sm btn-danger" title="Delete selected files" ng-click="ops.rm()" ng-disabled="!tests.canDelete" ng-if="tests.canDelete">
+                  <button class="btn btn-sm btn-default" title="Move to trash" ng-click="ops.trash()"
+                           ng-disabled="true">
+                      <i class="fa fa-trash"></i><span style="display:block;">Move to Trash</span>
+                  </button>
+                   <!-- <button class="btn btn-sm btn-danger" title="Delete selected files" ng-click="ops.rm()" ng-disabled="!tests.canDelete" ng-if="tests.canDelete">
                       <i class="fa fa-trash"></i><span style="display:block;">Delete selected files</span>
                   </button> -->
               </div>
