--- a/client/src/angular/workbench/templates/dashboard.html
+++ b/client/src/angular/workbench/templates/dashboard.html
@@ -4,7 +4,7 @@
     <div class="col-sm-3">
       <div class="dashboard-stat blue">
         <div class="visual">
-          <i class="fa fa-rocket">&nbsp;</i>
+          <i class="fa portal-icon-workspace-notext">&nbsp;</i>
         </div>
         <div class="details">
           <div class="number"> {{jobs.length}} </div>
@@ -26,7 +26,7 @@
     <div class="col-sm-3">
       <div class="dashboard-stat red">
         <div class="visual">
-          <i class="fa fa-database">&nbsp;</i>
+          <i class="fa portal-icon-data-notext">&nbsp;</i>
         </div>
         <div class="details">
           <div class="number"> {{usage.total_storage_bytes | bytes}} </div>
