--- a/client/src/angular/workbench/templates/home.html
+++ b/client/src/angular/workbench/templates/home.html
@@ -1,19 +1,19 @@
 <div class="workbench">
   <div class="workbench-nav">
     <div class="side-nav-button" ui-sref="wb.dashboard"  ui-sref-active="active">
-      <i class="fa fa-dashboard" title="Workbench"></i>
+      <i class="fa portal-icon-dashboard" title="Workbench"></i>
     </div>
-    <div class="side-nav-button" ui-sref="wb.data_depot.db({'systemId': vm.mydata_system.systemId, 'path': '', name: vm.mydata_system.name, 'directory': 'agave'})" ui-sref-active="active">
-    <i class="fa fa-database" title="Data Depot"></i>
+    <div class="side-nav-button" ui-sref="wb.data_depot({'systemId':vm.mydata_system.systemId, 'path': '/'})" ui-sref-active="active">
+      <i class="fa portal-icon-data" title="Data Depot"></i>
     </div>
     <div class="side-nav-button" ui-sref="wb.workspace" ui-sref-active="active">
-      <i class="fa fa-rocket" title="Workspace"></i>
+      <i class="fa portal-icon-workspace" title="Workspace"></i>
     </div>
     <div class="side-nav-button" ui-sref="wb.help" ui-sref-active="active">
-      <i class="fa fa-question" title="Help"></i>
+      <i class="fa portal-icon-help" title="Help"></i>
     </div>
     <div class="side-nav-button" ui-sref="wb.search" ui-sref-active="active">
-      <i class="fa fa-search" title="Search"></i>
+      <i class="fa portal-icon-search" title="Search"></i>
     </div>
   </div>
   <div class="workbench-content">
