--- a/client/css/workbench.css
+++ b/client/css/workbench.css
@@ -17,7 +17,7 @@
 .workbench-nav .side-nav-button {
   cursor:pointer;
   font-size: 4rem;
-  padding: 1rem;
+  padding-top: 1rem;
   text-align: center;
   border: 0.1rem solid rgba(0,0,0,0);
   -webkit-transition: all 0.3s ease;
@@ -58,4 +58,59 @@
 .workbench-content {
   flex: 1;
   padding-top: 1rem;
+}
+
+@font-face {
+font-family: 'Portal-Workbench';
+    src: url('/static/src/angular/workbench/fonts/Portal-Icons-Workbench.ttf') format('truetype');        
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="portal-icon-"]:before,
+[class*=" portal-icon-"]:before {
+    font-family: 'Portal-Workbench';
+    font-style: normal;
+    font-size: 5vw;
+    speak: none;
+    font-weight: normal;
+    -webkit-font-smoothing: antialiased;
+            font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+}
+
+.portal-icon-data:before {
+    content: "\e900";
+}
+
+.portal-icon-dashboard:before {
+    content: "\e901";
+}
+
+.portal-icon-help:before {
+    content: "\e902";
+}
+
+.portal-icon-search:before {
+    content: "\e903";
+}
+
+.portal-icon-workspace:before {
+    content: "\e904";
+}
+
+.portal-icon-data-notext:before {
+    content: "\e905";
+    left: 10px;
+    top: -7px;
+    font-size: 8vw;
+    position: relative;
+}
+
+.portal-icon-workspace-notext:before {
+    content: "\e906";
+    left: 10px;
+    top: -7px;
+    font-size: 8vw;
+    position: relative;
 }
