--- a/client/src/angular/workbench/templates/dashboard.html
+++ b/client/src/angular/workbench/templates/dashboard.html
@@ -151,7 +151,7 @@
               <dl class="system-def-list">
                 <dt>Name</dt>
                 <dd>{{sys.name}}</dd>
-                <dt>Stroage Host</dt>
+                <dt>Storage Host</dt>
                 <dd>{{sys.storage.host}}</dd>
                 <dt>Keys Tracked</dt>
                 <dd data-ng-if="sys.keysTracked">
@@ -232,7 +232,7 @@
               <dl class="system-def-list">
                 <dt>Name</dt>
                 <dd>{{sys.name}}</dd>
-                <dt>Stroage Host</dt>
+                <dt>Storage Host</dt>
                 <dd>{{sys.storage.host}}</dd>
                 <dt>Exec Host</dt>
                 <dd>{{sys.login.host}}</dd>
