--- a/client/src/angular/data_depot/templates/agave-data-listing.html
+++ b/client/src/angular/data_depot/templates/agave-data-listing.html
@@ -57,8 +57,11 @@
           data-ng-class="{'dd-file-selected':  file._ui.selected}">
           <td>
             <i class="fa {{ file.icon() }} fa-fw"></i>
-            <a data-ng-href="{{ file._links._self.href }}"
+            <!-- <a data-ng-href="{{ file._links._self.href }}"
                data-ng-click="onBrowse($event, file)">
+               {{ file.name }}
+            </a> -->
+            <a data-ng-click="onBrowse($event, file)">
                {{ file.name }}
             </a>
 
