Added __init__.py file to server/portal/views/portal/ dir so it will persist in codebase and be present during bootstrapping of containers. ALso removed console logging from analytics partials.

--- a/server/portal/templates/includes/analytics.html
+++ b/server/portal/templates/includes/analytics.html
@@ -12,7 +12,7 @@
       }
       dntCheck();
       if (dntStatus == 1) {
-        console.log("Do Not Track setting enabled. No metrics will be collected for this user.");
+        // console.log("Do Not Track setting enabled. No metrics will be collected for this user.");
       } else {
         // Prep gtag data.
         window.dataLayer = window.dataLayer || [];
@@ -35,7 +35,7 @@
       }
       dntCheck();
       if (dntStatus == 1) {
-        console.log("Do Not Track setting enabled. No metrics will be collected for this user.");
+        // console.log("Do Not Track setting enabled. No metrics will be collected for this user.");
       } else {
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
