allows werid file types to be downloaded

--- a/client/src/angular/workbench/templates/data-depot.html
+++ b/client/src/angular/workbench/templates/data-depot.html
@@ -43,7 +43,7 @@
                </div>
                <div class="btn-group">
 
-                  <button class="btn btn-sm btn-default" title="Download" ng-click="ops.download()"
+                  <button class="btn btn-sm btn-default" title="Download" ng-click="ops.download(preview=False)"
                            ng-disabled="!tests.canDownload">
                       <i class="fa fa-cloud-download"></i><span style="display:block;">Download</span>
                   </button>
