--- a/client/src/angular/workbench/templates/data-depot.html
+++ b/client/src/angular/workbench/templates/data-depot.html
@@ -151,7 +151,7 @@
                     My Data
                 </a>
             </div>
-            <div>
+            <!--<div>
                 <a class="list-group-item"
                     ui-sref="wb.data_depot.db({
                                 systemId: null,
@@ -162,7 +162,7 @@
                     <i class="fa fa-briefcase">&ensp;</i>
                     My Projects
                 </a>
-            </div>
+            </div>-->
             <div>
                 <a class="list-group-item"
                     ui-sref="wb.data_depot.db({
