--- a/devops/ansible/playbooks/roles/uwsgi/templates/project.ini.j2
+++ b/devops/ansible/playbooks/roles/uwsgi/templates/project.ini.j2
@@ -20,3 +20,4 @@ socket={{ uwsgi_socket_path }}
 chown-soscket={{ uwsgi_chown_socket }}
 chmod-socket={{ uwsgi_chmod_socket }}
 lazy-apps=true
+env=DJANGO_SETTINGS_MODULE=portal.settings.settings
