--- a/devops/ansible/playbooks/roles/uwsgi/templates/ws_project.ini.j2
+++ b/devops/ansible/playbooks/roles/uwsgi/templates/ws_project.ini.j2
@@ -4,7 +4,7 @@ chdir={{ uwsgi_chdir }}
 logto=/var/log/uwsgi/{{ uwsgi_log_filename}}
 log-maxsize={{ uwsgi_log_maxsize }}
 module={{ uwsgi_ws_module }}
-
+env=DJANGO_SETTINGS_MODULE=portal.settings.settings
 gid={{ uwsgi_gid }}
 uid={{ uwsgi_uid }}
 vacuum=True
