--- a/client/src/angular/workbench/templates/data-depot.html
+++ b/client/src/angular/workbench/templates/data-depot.html
@@ -1,47 +1,54 @@
 <div class="container-fluid">
-  <div ng-controller="MainCtrl" style="position:relative">
-    <div ng-controller="DataDepotToolbarCtrl">
-      <div class="clearfix btn-toolbar-ds dd-toolbar" ds-fix-top="dd-toolbar-fixed-top">
-          <div class="btn-toolbar pull-right" role="toolbar" aria-label="Data Browser Toolbar">
-              <!-- <div class="btn-group">
+    <div ng-controller="MainCtrl" style="position:relative">
+        <div ng-controller="DataDepotToolbarCtrl">
+            <div class="clearfix btn-toolbar-ds dd-toolbar" ds-fix-top="dd-toolbar-fixed-top">
+                <div class="btn-toolbar pull-right" role="toolbar" aria-label="Data Browser Toolbar">
+                    <!-- <div class="btn-group">
                 <i class="fa fa-spinner fa-spin fa-2x"> </i>
               </div> -->
-              <div class="btn-group">
-                  <button class="btn btn-sm btn-default" title="Rename" ng-click="ops.rename()"
-                           ng-disabled="!tests.canRename ||
+                    
+              <form class="navbar-form navbar-left"  style="display:flex" >
+              <input class="form-control" style="width:240px;" placeholder="Find in {{ placeholder() }}" ng-model="search.queryString">
+              <button class="btn btn-default" style="clear: right;"> <i class="fa fa-search"></i> </button>
+              </form>
+               
+
+                    <div class="btn-group">
+                        <button class="btn btn-sm btn-default" title="Rename" ng-click="ops.rename()" ng-disabled="!tests.canRename ||
                                         browser.project.publicationStatus === 'publishing'">
-                      <i class="fa fa-pencil"></i><span style="display:block;">Rename</span>
-                  </button>
-              </div>
+                            <i class="fa fa-pencil"></i>
+                            <span style="display:block;">Rename</span>
+                        </button>
+                    </div>
 
 
 
-              <div class="btn-group">
+                    <div class="btn-group">
 
-                  <button class="btn btn-sm btn-default" title="Move" ng-click="ops.move()"
-                           ng-disabled="!tests.canMove ||
+                        <button class="btn btn-sm btn-default" title="Move" ng-click="ops.move()" ng-disabled="!tests.canMove ||
                                         browser.project.publicationStatus === 'publishing'">
-                      <i class="fa fa-arrows"></i><span style="display:block;">Move</span>
-                  </button>
+                            <i class="fa fa-arrows"></i>
+                            <span style="display:block;">Move</span>
+                        </button>
 
-                  <button class="btn btn-sm btn-default" title="Copy" ng-click="ops.copy()"
-                           ng-disabled="!tests.canCopy ||
+                        <button class="btn btn-sm btn-default" title="Copy" ng-click="ops.copy()" ng-disabled="!tests.canCopy ||
                                         browser.project.publicationStatus === 'publishing'">
-                      <i class="fa fa-copy"></i><span style="display:block;">Copy</span>
-                  </button>
+                            <i class="fa fa-copy"></i>
+                            <span style="display:block;">Copy</span>
+                        </button>
 
-                  <button class="btn btn-sm btn-default" title="Preview" ng-click="ops.preview()"
-                           ng-disabled="!tests.canPreview ||
+                        <button class="btn btn-sm btn-default" title="Preview" ng-click="ops.preview()" ng-disabled="!tests.canPreview ||
                                         browser.project.publicationStatus === 'publishing'">
-                      <i class="fa fa-binoculars"></i><span style="display:block;">Preview</span>
-                  </button>
-                  <!--
+                            <i class="fa fa-binoculars"></i>
+                            <span style="display:block;">Preview</span>
+                        </button>
+                        <!--
                   <button class="btn btn-sm btn-default" title="Preview Images" ng-click="ops.previewImages()">
                       <i class="fa fa-photo"></i><span style="display:block;">Preview Images</span>
                   </button>
                 -->
-               </div>
-               <div class="btn-group">
+                    </div>
+                    <div class="btn-group">
 
                   <button class="btn btn-sm btn-default" title="Download" ng-click="ops.download(preview=False)"
                            ng-disabled="!tests.canDownload">
@@ -63,15 +70,15 @@
                            ng-if="!tests.canDelete">
                       <i class="fa fa-trash"></i><span style="display:block;">Move to Trash</span>
                   </button> -->
-                  <button class="btn btn-sm btn-default" title="Move to trash" ng-click="ops.trash()"
-                           ng-disabled="true">
-                      <i class="fa fa-trash"></i><span style="display:block;">Move to Trash</span>
-                  </button>
-                   <!-- <button class="btn btn-sm btn-danger" title="Delete selected files" ng-click="ops.rm()" ng-disabled="!tests.canDelete" ng-if="tests.canDelete">
+                        <button class="btn btn-sm btn-default" title="Move to trash" ng-click="ops.trash()" ng-disabled="true">
+                            <i class="fa fa-trash"></i>
+                            <span style="display:block;">Move to Trash</span>
+                        </button>
+                        <!-- <button class="btn btn-sm btn-danger" title="Delete selected files" ng-click="ops.rm()" ng-disabled="!tests.canDelete" ng-if="tests.canDelete">
                       <i class="fa fa-trash"></i><span style="display:block;">Delete selected files</span>
                   </button> -->
-              </div>
-              <!--
+                    </div>
+                    <!--
               <div class="btn-group">
                   <button class="btn btn-sm btn-info" title="Details for {{ browser.listing.name }}" ng-click="ops.details()">
                       <i class="fa fa-info-circle"></i><span style="display:block;">Details</span>
@@ -79,31 +86,30 @@
                   </button>
               </div>
               -->
-          </div>
-      </div>
+                </div>
+            </div>
 
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-sm-3 col-md-2">
-        <div ng-controller="DataDepotNewCtrl">
-          <div style="margin: 0 10px 20px">
-              <div class="btn-group btn-block">
-                  <button class="btn btn-block btn-primary dropdown-toggle"
-                          data-toggle="dropdown" ng-disabled="! test.enabled">
-                  <i class="fa fa-plus-circle"></i> Add
-                  </button>
-                  <ul class="dropdown-menu">
-                      <li ng-class="{'disabled': ! test.createFiles}">
-                          <a ng-click="createFolder($event)">
-                                  <span class="fa-stack fa-lg">
-                                      <i class="fa fa-folder fa-stack-2x"></i>
-                                      <i class="fa fa-plus fa-stack-1x fa-inverse"></i>
-                                  </span>
-                              <span class="">New Folder</span>
-                          </a>
-                      </li>
-                      <!--
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm-3 col-md-2">
+                <div ng-controller="DataDepotNewCtrl">
+                    <div style="margin: 0 10px 20px">
+                        <div class="btn-group btn-block">
+                            <button class="btn btn-block btn-primary dropdown-toggle" data-toggle="dropdown" ng-disabled="! test.enabled">
+                                <i class="fa fa-plus-circle"></i> Add
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li ng-class="{'disabled': ! test.createFiles}">
+                                    <a ng-click="createFolder($event)">
+                                        <span class="fa-stack fa-lg">
+                                            <i class="fa fa-folder fa-stack-2x"></i>
+                                            <i class="fa fa-plus fa-stack-1x fa-inverse"></i>
+                                        </span>
+                                        <span class="">New Folder</span>
+                                    </a>
+                                </li>
+                                <!--
                       <li ng-class="{'disabled': ! test.createProject}">
                           <a href="#" ng-click="createProject($event)">
                               <span class="fa-stack fa-lg">
@@ -143,13 +149,12 @@
                                 systemId: sysMyData.systemId,
                                 filePath:'',
                                 name: sysMyData.name,
-                                directory: 'agave'})"
-                    ui-sref-active="active">
-                    <i class="fa fa-user">&ensp;</i>
-                    My Data
-                </a>
-            </div>
-            <!--<div>
+                                directory: 'agave'})" ui-sref-active="active">
+                            <i class="fa fa-user">&ensp;</i>
+                            My Data
+                        </a>
+                    </div>
+                    <!--<div>
                 <a class="list-group-item"
                     ui-sref="wb.data_depot.db({
                                 systemId: null,
@@ -161,25 +166,23 @@
                     My Projects
                 </a>
             </div>-->
-            <div>
-                <a class="list-group-item"
-                    ui-sref="wb.data_depot.db({
+                    <div>
+                        <a class="list-group-item" ui-sref="wb.data_depot.db({
                                 systemId: sysCommunityData.systemId,
                                 filePath:'',
                                 name: sysCommunityData.name,
-                                directory: 'public'})"
-                    ui-sref-active="active">
-                    <i class="fa fa-users">&ensp;</i>
-                    Community Data
-                </a>
+                                directory: 'public'})" ui-sref-active="active">
+                            <i class="fa fa-users">&ensp;</i>
+                            Community Data
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-9 col-md-10">
+                <ui-view>
+
+                </ui-view>
             </div>
         </div>
-      </div>
-      <div class="col-sm-9 col-md-10">
-        <ui-view>
-
-        </ui-view>
-      </div>
     </div>
-  </div>
 </div>
