--- a/client/src/angular/search/templates/search-result.html
+++ b/client/src/angular/search/templates/search-result.html
@@ -1,4 +1,4 @@
-<div ng-if='listing.doc_type === "file" || listing.doc_type === "object"'>
+<div ng-if='listing.doc_type === "files" || listing.doc_type === "object"'>
   <div class="search-result clearfix">
     <div class="col-md-6">
       <i ng-if="listing.mimeType == 'text/directory'" class="fa fa-folder fa-lg"> </i>
