--- a/client/src/angular/workbench/templates/search.html
+++ b/client/src/angular/workbench/templates/search.html
@@ -12,7 +12,7 @@
           </div><!-- /input-group -->
         </div>
       </div>
-        <!-- <div class="col-md-3">
+        <div class="col-md-3">
           <h2>Refine By:</h2>
           <div class=list-group>
             <a class="list-group-item" ng-class='{"active": data.type_filter == "private_files"}' ng-click='filter("private_files")'>My Data
@@ -31,8 +31,7 @@
                 <span class="badge" ng-show='data.search_results.cms_total'> {{ data.search_results.cms_total }}</span>
             </a>
           </div>
-        </div> -->
-        <h1>Coming Soon</h1>
+        </div> 
         <div class="col-md-9" ng-show="data.search_results">
           <h2> Search Results {{makeUrl(data)}} </h2>
           <div ng-show='data.search_results.total_hits === 0'>
