--- a/client/src/angular/workbench/templates/search.html
+++ b/client/src/angular/workbench/templates/search.html
@@ -3,9 +3,9 @@
       <div class="row">
         <div class="col-md-6">
           <div class="input-group">
-            <input type="text" class="form-control input-lg" ng-model="data.text" placeholder="Search for..." ng-change="search(true)" ng-model-options='{debounce: 500}'>
+            <input type="text" class="form-control input-lg" ng-model="data.text" placeholder="Search for..." ng-change="search_browse()" ng-model-options='{debounce: 500}'>
             <span class="input-group-btn">
-              <button class="btn btn-default btn-lg" type="button" ng-click="search(true)">
+              <button class="btn btn-default btn-lg" type="button" ng-click="search_browse()">
                 <i class="fa fa-search"></i>
               </button>
             </span>
@@ -19,11 +19,11 @@
                 <span class="badge" ng-show='data.search_results.private_files_total'> {{ data.search_results.private_files_total }}</span>
             </a>
             
-            <a class="list-group-item" ng-class='{"active": data.type_filter == "published"}' ng-click='filter("published")'>Published Projects
+            <a class="list-group-item disabled" ng-class='{"active": data.type_filter == "published"}' ng-click='filter("published")'>Published Projects
                 <span class="badge" ng-show='data.search_results.published_total'> {{ data.search_results.published_total }}</span>
             </a>
 
-            <a class="list-group-item" ng-class='{"active": data.type_filter == "public_files"}' ng-click='filter("public_files")'>Public Files
+            <a class="list-group-item disabled" ng-class='{"active": data.type_filter == "public_files"}' ng-click='filter("public_files")'>Public Files
                 <span class="badge" ng-show='data.search_results.public_files_total'> {{ data.search_results.public_files_total }}</span>
             </a>
            
