edited or new files in data depot should update without refresh and spinner is working

--- a/client/src/angular/data_depot/templates/agave-data-listing.html
+++ b/client/src/angular/data_depot/templates/agave-data-listing.html
@@ -7,7 +7,7 @@
   item-href="resolveBreadcrumbHref">
 </dd-breadcrumb>
 
-<div class="alert alert-info" ng-show="browser.busyListing">
+<div class="alert alert-info" ng-show="browser.busyListing || browser.busy">
   <p class="text-center">
       <i class="fa fa-spinner fa-spin"></i> Loading...
   </p>
