Added missing path segment to nginx.conf.j2 under ansible playbooks for live system deployment.

--- a/devops/ansible/playbooks/roles/nginx/templates/nginx.conf.j2
+++ b/devops/ansible/playbooks/roles/nginx/templates/nginx.conf.j2
@@ -58,7 +58,7 @@ http {
         {% if not server.livereload %}
 
         location /media  {
-            alias {{project_home_dir}}/{{project_name}}/media;
+            alias {{project_home_dir}}/{{project_name}}/server/media;
         }
 
         location /static {
