fixing a broken ref for tacc logo

--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a href="/" class="navbar-left">
-        <img src="{% static 'img/TACC_Logo_vendor.png'%}" class="portal-branding nav-icon" style="height:45px;">
+        <img src="{% static 'img/TACC_Logo_vector.png'%}" class="portal-branding nav-icon" style="height:45px;">
         <!--
         <img src="{% static 'img/cep_logo.png'%}" class="portal-branding nav-icon" style="height:45px;">
         -->
