Added several deps required by CMS and reordered some settins for easier grokking when tweaking. This should fix the CMS at long last.

--- a/server/portal/templates/cms_page.html
+++ b/server/portal/templates/cms_page.html
@@ -1,3 +1,6 @@
 {% extends "base.html" %}
 {% load cms_tags staticfiles sekizai_tags menu_tags %}
-{% block content %}{% placeholder "content" %}{% endblock content %}
+{% block content %}
+  {# Creates CMS Sections to Edit in UI Plugin #}
+  {% placeholder "content" %}
+{% endblock content %}
