--- a/server/portal/templates/cms_page.html
+++ b/server/portal/templates/cms_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load cms_tags staticfiles sekizai_tags menu_tags %}
+{% load staticfiles cms_tags sekizai_tags menu_tags %}
 {% block content %}
   {# Creates CMS Sections to Edit in UI Plugin #}
   {% placeholder "content" %}
