i'm sure there's a better way of setting the ssl redirect port just for dev deployment with vagrant, but this is what we're doing for now.

--- a/devops/ansible/playbooks/roles/nginx/templates/nginx.conf.j2
+++ b/devops/ansible/playbooks/roles/nginx/templates/nginx.conf.j2
@@ -31,7 +31,7 @@ http {
     server {
         listen  80 {% if server.default %}default_server{% endif %};
         server_name  {{ server.name }};
-        return 301  https://{{ server.name }}$request_uri;
+        return 301  https://{{ server.name }}{{ nginx_ssl_redirect_port }}$request_uri;
     }
 
     server {
