Fixing celery beat worker.

--- a/devops/ansible/playbooks/roles/celeryd/templates/celery_beat.service.j2
+++ b/devops/ansible/playbooks/roles/celeryd/templates/celery_beat.service.j2
@@ -8,12 +8,20 @@ User={{celeryd_user}}
 Group={{celeryd_group}}
 EnvironmentFile=/etc/conf.d/celery
 WorkingDirectory={{ celeryd_working_dir }}
-ExecStart={{celeryd_venv_bin}} multi start ${CELERY_NODES} \
-    -A ${CELERY_APP} \
-    --pidfile=${CELERYBEAT_PID_FILE} \
-    --logfile=${CELERYBEAT_LOG_FILE} \
-    --loglevel=${CELERYBEAT_LOG_LEVEL} \
-    ${CELERY_OPTS} \ 
+# ExecStart={{celeryd_venv_bin}} multi start ${CELERY_NODES} \
+#     -A ${CELERY_APP} \
+#     --pidfile=${CELERYBEAT_PID_FILE} \
+#     --logfile=${CELERYBEAT_LOG_FILE} \
+#     --loglevel=${CELERYBEAT_LOG_LEVEL} \
+#     ${CELERYBEAT_OPTS} \
+#     --beat
+ExecStart=/srv/www/.envs/portal/bin/python2 -m celery worker \
+    --hostname=localhost@cep-web-staging-01.tacc.utexas.edu \
+    -A portal.celery_app:app \
+    --pidfile=/var/run/celery_beat/localhost.pid \
+    --logfile=/var/log/celery/celerybeat.log \
+    --loglevel=error \
+    --autoscale=20,5 \
     --beat
 ExecStop={{celeryd_venv_bin}} multi stopwait ${CELERY_NODES} \
     --pidfile=${CELERYBEAT_PID_FILE}
