fix for jobs service and chart

--- a/client/src/angular/workbench/templates/dashboard.html
+++ b/client/src/angular/workbench/templates/dashboard.html
@@ -68,10 +68,7 @@
               <div class="col-md-3">
                 <span class="label label-default"> {{job.appId}} </span>
               </div>
-              <div class="col-md-6 text-center">
-                <a data-ng-href="{{ job._links.archiveData.href | agave2ds }}"> Link to output </a>
-              </div>
-              <div class="col-md-3 text-right">
+              <div class="col-md-3 col-md-offset-6 text-right">
                 <span class="label label-info"> {{ job.status }} </span>
               </div>
             </div>
