--- a/client/src/angular/workbench/templates/search.html
+++ b/client/src/angular/workbench/templates/search.html
@@ -1,17 +1,21 @@
 <div class="container-fluid" role="main" id="search">
   <div class="container-fluid" ng-controller="SearchViewCtrl">
-      <div class="row">
+      <div class="row justify-content-center" >
+        <div class="col-md-3"></div>
         <div class="col-md-6">
+          <form ng-submit="search_browse()">
           <div class="input-group">
-            <input type="text" class="form-control input-lg" ng-model="data.text" placeholder="Search for..." ng-change="search_browse()" ng-model-options='{debounce: 500}'>
+            <input type="text" class="form-control input-lg" ng-model="data.text" placeholder="Search for...">
             <span class="input-group-btn">
               <button class="btn btn-default btn-lg" type="button" ng-click="search_browse()">
                 <i class="fa fa-search"></i>
               </button>
             </span>
           </div><!-- /input-group -->
+        </form>
         </div>
       </div>
+      <div class="row">
         <div class="col-md-3">
           <h2>Refine By:</h2>
           <div class=list-group>
@@ -35,7 +39,7 @@
         <div class="col-md-9" ng-show="data.search_results">
           <h2> Search Results {{makeUrl(data)}} </h2>
           <div ng-show='data.search_results.total_hits === 0'>
-            <div class="alert alert-danger">
+            <div class="alert alert-info">
               <h3>
                   no results in {{prettyFilterName[data.type_filter]}}
               </h3>
