--- a/client/src/angular/workbench/templates/notifications.html
+++ b/client/src/angular/workbench/templates/notifications.html
@@ -1,3 +1,4 @@
 <div class="container-fluid" id="notifications">
+  <h5> Events in the portal like job submissions, job status updates, and file operations will be displayed here. </h5>
   <notifications-list> </notifications-list>
 </div>
