--- a/client/css/portal.css
+++ b/client/css/portal.css
@@ -19,6 +19,7 @@ footer {
   background-size: 100%;
   height: 40px;
   width: 100%;
+  margin-top: 1em;
 }
 
 .navbar-default .navbar-nav>.open>a,
@@ -117,7 +118,7 @@ a[ng-click]:hover {
     cursor: pointer;
 }
 
-#toast-container {
+/* #toast-container {
   position: fixed;
   bottom: 0;
   z-index: 999;
@@ -149,6 +150,5 @@ md-toast.warning .md-toast-content {
 }
 
 md-toast.info .md-toast-content {
-  /* background: #4caf50;*/
   color: white;
-}
+} */
