--- a/client/src/angular/workbench/templates/dashboard.html
+++ b/client/src/angular/workbench/templates/dashboard.html
@@ -102,7 +102,7 @@
         </div>
         <ul class="list-group">
           <li class="list-group-item" data-ng-repeat="app in recent_apps">
-            <a href="/rw/workspace/#/{{app}}"> {{app}} </a>
+            <a ui-sref="wb.workspace"> {{app}} </a>
           </li>
           <li class="list-group-item" data-ng-show="!recent_apps.length">
             Wow, no recent apps! You can submit jobs in the
