--- a/client/src/angular/workbench/templates/home.html
+++ b/client/src/angular/workbench/templates/home.html
@@ -7,7 +7,7 @@
     <div  class="side-nav-button"
           ui-sref="wb.data_depot.db({'systemId': vm.mydata_system.systemId, 'path': '', 'name': vm.mydata_system.name, 'directory': 'agave'})"
           ui-sref-active="active">
-      <i class="fa fa-database" title="Data Depot"></i>
+      <i class="fa fa-folder-open" title="Data Depot"></i>
       <div class="side-nav-text"> Data Depot </div>
 
     </div>
