Last round of CMS and Portal customization tweaks:
- Last of the new plugin dependencies are added and working as best I can tell in the CMS. This adds several features:
  -- Social Media sharing
  -- News article publications & feeds
  -- Additional video, audio and other embed plugins

- Cleaned up and added configurable keys to settings for portal icon, logo and navbar background art.
- New keys are:
  -- PORTAL_ICON_FILENAME=settings_secret._PORTAL_ICON_FILENAME
  -- PORTAL_LOGO_FILENAME=settings_secret._PORTAL_LOGO_FILENAME
  -- PORTAL_NAVBAR_BACKGROUND_FILENAME=settings_secret._PORTAL_NAVBAR_BACKGROUND_FILENAME
- Usage:
  -- If an empty string is used, default art is used for portal (TACC logos)
  -- Otherwise specific art can be listed and will populate in the portal.
  -- requires a collectstatic after adding new art to secrets.

--- a/client/css/portal.css
+++ b/client/css/portal.css
@@ -38,9 +38,13 @@ footer {
   font-weight: 700;
 }
 
-.navbar-portal {
-  background-image: url('/static/img/network-Header.jpg');
-  /* background-image: url('/static/img/cep-bg.jpg'); */
+.navbar-logo-text {
+  font-size: 2.5rem;
+  font-weight: 900;
+  margin: 0.5rem;
+}
+a.navbar-logo-text:hover {
+  text-decoration: none;
 }
 
 .navbar.navbar-default {
