--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -1,49 +1,30 @@
 {% load sd2e_nav_tags menu_tags cms_tags staticfiles %}
-<nav class="navbar navbar-default navbar-portal">
+{% if settings.PORTAL_NAVBAR_BACKGROUND_FILENAME %}
+<nav class="navbar navbar-default" style="background-image: url('{{ settings.PORTAL_NAVBAR_BACKGROUND_FILENAME }}');">
+{% else %}
+<nav class="navbar navbar-default">
+{% endif %}
   <div class="container-fluid">
     <div class="navbar-header">
       <a href="/" class="navbar-left">
-        <img src="{% static 'img/logo.png'%}" class="portal-branding nav-icon" style="height:45px;">
-        <!--
-        <img src="{% static 'img/cep_logo.png'%}" class="portal-branding nav-icon" style="height:45px;">
-        -->
+        {% if settings.PORTAL_LOGO_FILENAME %}
+        <img src="{{ settings.PORTAL_LOGO_FILENAME }}" class="portal-branding nav-icon" style="height:45px;">
+        {% else %}
+        <div class="text-primary navbar-logo-text">PORTAL</div>
+        {% endif %}
       </a>
       <!-- Normal Navbar -->
       <ul class="nav navbar-nav hidden-xs">
         <!-- when user is logged in, show these nav items -->
         {% if user.is_authenticated %}
         <li class="{% active 'workbench' %}">
-          <a href="{% url 'workbench:index' %}">
-            Workbench
-          </a>
+          <a href="{% url 'workbench:index' %}">Workbench</a>
         </li>
-        <!--
-        <li class="dropdown">
-          <a class="dropdown-toggle"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Learning Center
-          <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li>
-              <a>
-                Training
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a href="/workbench/help">Help</a>
-        </li>
-        <li>
-          <a href="/workbench/search">Search</a>
-        </li>
-        -->
         {% endif %}
         <!-- end of user authed nav items-->
       </ul>
       {% if section_root %}
-        <a class="navbar-brand">{{section_root.title}}</a>
+      <a class="navbar-brand">{{section_root.title}}</a>
       {% endif %}
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navigation" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -63,20 +44,20 @@
       <ul class="nav navbar-nav navbar-right">
       {% if user.is_authenticated %}
       <div class="nav navbar-nav navbar-right"  ng-controller="NavSearchCtrl as vm">
-          <!-- <form class="navbar-form navbar-left navbar-input-group">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search" ng-model="vm.text"/>
-                <button
-                  type="submit"
-                  ng-click="vm.search(vm.text)"
-                  class="btn btn-default">
-                  <i class="fa fa-search"></i>
-                </button>
-              </div>
-          </form> -->
-
-
-
+        <!-- Unused Serach Bar -->
+        <!--
+        <form class="navbar-form navbar-left navbar-input-group">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search" ng-model="vm.text"/>
+            <button
+              type="submit"
+              ng-click="vm.search(vm.text)"
+              class="btn btn-default">
+              <i class="fa fa-search"></i>
+            </button>
+          </div>
+        </form>
+        -->
         <li class="dropdown right-nav-links">
           <a class="dropdown-toggle"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -105,7 +86,6 @@
         </div>
         </li>
         {% else %} <!-- if user is not logged in -->
-
         <li class="right-nav-links {% if request.get_full_path == '/about/' %} active {% endif %}">
           <a href="/accounts/request-access/" class="btn btn-link-alt">
             <i class="fa fa-group nav-icon"></i> Request Access
@@ -116,7 +96,7 @@
             <i class="fa fa-sign-in nav-icon"></i> Log in
           </a>
         </li>
-        <!-- Hidden until auth flow is properly implemented.  -->
+        <!-- Hidden until auth flow is properly implemented and MFA impact is determined.  -->
         <!--
         <li class="right-nav-links">
           <a href="{% url 'portal_accounts:register' %}" class="btn btn-link-alt">
