--- a/client/src/angular/workbench/templates/home.html
+++ b/client/src/angular/workbench/templates/home.html
@@ -5,7 +5,7 @@
     </div>
     <div  class="side-nav-button"
           ui-sref="wb.data_depot.db({'systemId': vm.mydata_system.systemId, 'path': '', 'name': vm.mydata_system.name, 'directory': 'agave'})"
-          ui-sref-active="active">
+          ui-sref-active="{'active': 'wb.data_depot.**'}">
       <i class="fa portal-icon-data" title="Data Depot"></i>
     </div>
     <div class="side-nav-button" ui-sref="wb.workspace" ui-sref-active="active">
